Finsihed the burger menu - adjusting sizing for mobile - stopped at Behind section - don't forget the calc feature

--- a/shutter/style.css
+++ b/shutter/style.css
@@ -81,7 +81,10 @@ header .wrapper {
 header h1 {
     margin: 30px 0 0 0;
     font-size: 32px;
+}
 
+nav .menu-hamburger {
+    display: none;
 }
 
 nav ul {
@@ -167,16 +170,16 @@ nav li:last-child {
     margin-top: 8px;
 }
 
-#menu-toggle:checked+.menu-button-container .menu-button::before {
+#menu-toggle:checked+ .menu-button-container .menu-button::before {
     margin-top: 0px;
     transform: rotate(405deg);
 }
 
-#menu-toggle:checked+.menu-button-container .menu-button {
+#menu-toggle:checked+ .menu-button-container .menu-button {
     background: rgba(255, 255, 255, 0);
 }
 
-#menu-toggle:checked+.menu-button-container .menu-button::after {
+#menu-toggle:checked+ .menu-button-container .menu-button::after {
     margin-top: 0px;
     transform: rotate(-405deg);
 }
@@ -455,46 +458,116 @@ footer p {
 }
 
 
-
 @media (max-width:995px){
+
+    section {
+        padding: 50px 0 50px 0;
+    }
+
+    /* nav */
+
+    nav .menu {
+        display: none;
+    }
+    
     .menu-button-container {
         display: flex;
     }
 
-    nav ul {
+    nav .menu-hamburger {
+        display: flex;
         position: absolute;
         top: 0;
-        margin-top: 50px;
+        margin-top: 100px;
         left: 0;
         flex-direction: column;
         width: 100%;
         justify-content: center;
         align-items: center;
+        list-style-type: none;
     }
 
-    #menu-toggle ~ nav li {
+    #menu-toggle ~ .menu-hamburger li {
         height: 0;
         margin: 0;
         padding: 0;
         border: 0;
         transition: height 400ms cubic-bezier(0.23, 1, 0.320, 1);
+        display: none;
     }
-    #menu-toggle:checked ~ nav li {
-        border: 1px solid #232323;
-        height: 2.5 rem;
-        padding: .5rem;
+    #menu-toggle:checked ~ .menu-hamburger li {
+        border: 1px solid #000;
+        height: 1.75em;
+        padding: 0.5em;
         transition: height 400ms cubic-bezier(0.23, 1, 0.320, 1);
+        display: flex;
     }
-    nav ul > li {
+    nav .menu-hamburger > li {
         display: flex;
         justify-content: center;
         margin: 0;
-        padding: .5rem 0;
+        padding: 5em 0;
         width: 100%;
-        color: #f0f5ff;
-        background-color: #000;
+        color:#000;
+        background-color: #e7a8e6;
     }
-    nav ul > li:not(:last-child) {
-        border-bottom: 1px solid #e7a8e6;
+
+    .socials {
+        display: none;
+    }
+
+    .wrapper-header h1 {
+        padding-bottom: 500px;
+    }
+
+    /* about section */
+
+
+    /* gallery */
+
+    .gallery .wrapper {
+        width: 100%;
+        margin: auto;
+    }
+    .gallery {
+        padding: 0;
+    }
+
+    .gallery li:last-child {
+        display: none;
+    }
+
+    .gallery li {
+        width: 100%;
+    }
+
+    /* mid-nav */
+    
+
+    .mid-nav {
+        background-color: #232323;
+        background-image: none;
+        padding: 0;
+    }
+ 
+    .mid-nav ul {
+        flex-direction: column;
+        padding: 50px 0 0px 0;
+    }
+
+    .mid-nav li {
+        padding-bottom: 30px;
+    }
+
+    /* behind section */
+
+
+    .behind-flex {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .behind-flex.img-container {
+        padding: 0;
     }
 }
